src/objects/Survey__c.object
<CustomObject>
    <description>Holds the questions(fields) and responses(field values) for all Probing and Ad hoc surveys.</description>
    <fields>
        <fullName>Action_Collect_PII__c</fullName>
        <description>probing questions needed to capture security breach incidents</description>
        <inlineHelpText>Action: Be sure to capture consumer name, address, phone and email.</inlineHelpText>
        <label>Action Collect PII</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actioned</fullName>
                </value>
                <value>
                    <fullName>Unable to Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Notify_TL__c</fullName>
        <description>probing questions needed to capture security breach incidents</description>
        <inlineHelpText>Action: Notify your team leader immediately</inlineHelpText>
        <label>Action Notify TL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actioned</fullName>
                </value>
                <value>
                    <fullName>Unable to Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Not_Sticking__c</fullName>
        <description>What activities were you doing when you noticed the pad wasn’t sticking?</description>
        <inlineHelpText>What activities were you doing when you noticed the pad wasn’t sticking?</inlineHelpText>
        <label>Activity Not Sticking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exercising</fullName>
                </value>
                <value>
                    <fullName>Sitting/Standing/Working</fullName>
                </value>
                <value>
                    <fullName>Walking</fullName>
                </value>
                <value>
                    <fullName>Sleeping</fullName>
                </value>
                <value>
                    <fullName>Other/Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adhesive_Strength__c</fullName>
        <description>What part of the product did you find the adhesive to be too strong?</description>
        <inlineHelpText>What part of the product did you find the adhesive to be too strong?</inlineHelpText>
        <label>Adhesive Strength</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Front of the product</fullName>
                </value>
                <value>
                    <fullName>Side of the product</fullName>
                </value>
                <value>
                    <fullName>Back of the product</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Country_Brand_Model_Washer__c</fullName>
        <description>What brand and model of washing machine do you have? Please be as specific as possible</description>
        <inlineHelpText>What brand and model of washing machine do you have? Please be as specific as possible</inlineHelpText>
        <label>All Country Brand Model Washer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>All_Country_How_Many_Pods__c</fullName>
        <description>How many pods did you use?</description>
        <inlineHelpText>How many pods did you use?</inlineHelpText>
        <label>All Country How Many Pods</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 pod</fullName>
                </value>
                <value>
                    <fullName>2 pods</fullName>
                </value>
                <value>
                    <fullName>3 or more pods</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Country_Pod_Placement__c</fullName>
        <description>Where did you place the pod?</description>
        <inlineHelpText>Where did you place the pod?</inlineHelpText>
        <label>All Country Pod Placement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On the bottom of the empty drum, in the front of the machine</fullName>
                </value>
                <value>
                    <fullName>On the bottom of the empty drum, In the middle of the machine</fullName>
                </value>
                <value>
                    <fullName>On the bottom of the empty drum, in the back of the machine</fullName>
                </value>
                <value>
                    <fullName>In the middle of the clothes</fullName>
                </value>
                <value>
                    <fullName>On top of the clothes</fullName>
                </value>
                <value>
                    <fullName>In dispenser</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Country_Residue__c</fullName>
        <description>Was the residue found on your clothes/fabrics or in the machine?</description>
        <inlineHelpText>Was the residue found on your clothes/fabrics or in the machine?</inlineHelpText>
        <label>All Country Residue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clothes/fabrics</fullName>
                </value>
                <value>
                    <fullName>Machine (e.g. door-gasket-rubber-drum)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Country_Wash_Cycle__c</fullName>
        <description>What is the cycle you have used?</description>
        <inlineHelpText>What is the cycle you have used?</inlineHelpText>
        <label>All Country Wash Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Whites-Sanitary</fullName>
                </value>
                <value>
                    <fullName>Heavy Duty-Heavy-Super Wash</fullName>
                </value>
                <value>
                    <fullName>Normal-Regular-Cotton (Automatic-Standard)</fullName>
                </value>
                <value>
                    <fullName>Perm. Press-Casual-Easy Care-Synthetics</fullName>
                </value>
                <value>
                    <fullName>Delicate-Handwash-Soft-Dry-Wool</fullName>
                </value>
                <value>
                    <fullName>Quick Wash-Speed Wash-Short Wash-Eco</fullName>
                </value>
                <value>
                    <fullName>Extra Rinse</fullName>
                </value>
                <value>
                    <fullName>Single Rinse</fullName>
                </value>
                <value>
                    <fullName>Custom Course</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Country_Wash_Size__c</fullName>
        <description>How full would you say you filled your machine?</description>
        <inlineHelpText>How full would you say you filled your machine?</inlineHelpText>
        <label>All Country Wash Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small (1-4) pieces</fullName>
                </value>
                <value>
                    <fullName>Less than half full</fullName>
                </value>
                <value>
                    <fullName>Half full</fullName>
                </value>
                <value>
                    <fullName>Around ¾ full</fullName>
                </value>
                <value>
                    <fullName>Completely full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Country_Wash_Temp__c</fullName>
        <description>What wash temperature did you select?</description>
        <inlineHelpText>What wash temperature did you select?</inlineHelpText>
        <label>All Country Wash Temp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>Tap Cold</fullName>
                </value>
                <value>
                    <fullName>Inlet Cold</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>30c</fullName>
                </value>
                <value>
                    <fullName>40c</fullName>
                </value>
                <value>
                    <fullName>60c</fullName>
                </value>
                <value>
                    <fullName>90c</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Country_Washer_Type__c</fullName>
        <description>What type of washing machine do you have?</description>
        <inlineHelpText>What type of washing machine do you have?</inlineHelpText>
        <label>All Country Washer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional Top Loader with agitator post</fullName>
                </value>
                <value>
                    <fullName>HE Top Loader without agitator post</fullName>
                </value>
                <value>
                    <fullName>HE Front Loader</fullName>
                </value>
                <value>
                    <fullName>Traditional Front Loader</fullName>
                </value>
                <value>
                    <fullName>Twin Tub</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Automatic Top Loader</fullName>
                </value>
                <value>
                    <fullName>Automatic Front Loader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Dish_Food__c</fullName>
        <description>When you first noticed the discoloration of your items, did you prepare / cook meals containing pasta / rice / potatoes / beans in this item?</description>
        <inlineHelpText>When you first noticed the discoloration of your items, did you prepare / cook meals containing pasta / rice / potatoes / beans in this item?</inlineHelpText>
        <label>Auto Dish Food</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Dish_What_Dish__c</fullName>
        <description>Which item(s) show discoloration?</description>
        <inlineHelpText>Which item(s) show discoloration?</inlineHelpText>
        <label>Auto Dish What Dish</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Casserole</fullName>
                </value>
                <value>
                    <fullName>Cutlery</fullName>
                </value>
                <value>
                    <fullName>Metal tray</fullName>
                </value>
                <value>
                    <fullName>Copper pan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Dish_When_did_you_notice__c</fullName>
        <description>When you noticed the discoloration of your item, was there anything you had recently changed with how you washed your dishes?</description>
        <inlineHelpText>When you noticed the discoloration of your item, was there anything you had recently changed with how you washed your dishes?</inlineHelpText>
        <label>Auto Dish When did you notice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Changed cycle into a cycle washing at lower temperature</fullName>
                </value>
                <value>
                    <fullName>Changed cycle into a cycle taking less time</fullName>
                </value>
                <value>
                    <fullName>Started using rinse aid</fullName>
                </value>
                <value>
                    <fullName>Started using salt</fullName>
                </value>
                <value>
                    <fullName>Stopped pre-treating dishes before I put them in the dishwasher</fullName>
                </value>
                <value>
                    <fullName>My Damage was not caused by discoloration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Dish_Which_Detergent__c</fullName>
        <description>Which automatic dish detergent have you used in the last 3 months?</description>
        <inlineHelpText>Which automatic dish detergent have you used in the last 3 months?</inlineHelpText>
        <label>Auto Dish Which Detergent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I only use Fairy</fullName>
                </value>
                <value>
                    <fullName>I switch between Fairy and other branded products</fullName>
                </value>
                <value>
                    <fullName>I switch between Fairy and private labels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Dish__c</fullName>
        <description>After how many washes did you start noticing this discoloration?</description>
        <inlineHelpText>After how many washes did you start noticing this discoloration?</inlineHelpText>
        <label>Auto Dish How Many Washes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>After 1 wash</fullName>
                </value>
                <value>
                    <fullName>After 2-4 washes</fullName>
                </value>
                <value>
                    <fullName>After 4-10 washes</fullName>
                </value>
                <value>
                    <fullName>After 10-20 washes</fullName>
                </value>
                <value>
                    <fullName>After more than 20 washes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Baby_Height__c</fullName>
        <description>What is the height of your baby?(cm)  (if unknown what is the current clothing  size?)</description>
        <inlineHelpText>What is the height of your baby?(cm)  (if unknown what is the current clothing  size?)</inlineHelpText>
        <label>Baby Height</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Baby_Sleeping__c</fullName>
        <description>Did the leakage mostly occur while the baby was sleeping?</description>
        <inlineHelpText>Did the leakage mostly occur while the baby was sleeping?</inlineHelpText>
        <label>Baby Sleeping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Baby_Weight__c</fullName>
        <description>What is the weight of your baby? (kg)</description>
        <inlineHelpText>What is the weight of your baby? (kg)</inlineHelpText>
        <label>Baby Weight</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Carton_Sealed__c</fullName>
        <description>Was the carton sealed when you purchased the product?</description>
        <inlineHelpText>Was the carton sealed when you purchased the product?</inlineHelpText>
        <label>Carton Sealed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Comment_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the case comment code associated with the survey</description>
        <inlineHelpText>Find the case comment code associated with this survey</inlineHelpText>
        <label>Case Comment Code</label>
        <referenceTo>Case_Comment_Code__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is for the Case Product associated with this survey</description>
        <inlineHelpText>Find the case product that is associated with the survey</inlineHelpText>
        <label>Case Product</label>
        <referenceTo>Case_Product__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Case to which this survey is related</description>
        <inlineHelpText>Please find the case to which this survey is related.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charger_Original__c</fullName>
        <description>Is the charger the unit that came with product when originally purchased?</description>
        <inlineHelpText>Is the charger the unit that came with product when originally purchased?</inlineHelpText>
        <label>Charger- Original</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charger_Purchase_Location__c</fullName>
        <description>If the charger was a replacement and you purchased online, do you have the retailer’s user name or URL?</description>
        <inlineHelpText>If the charger was a replacement and you purchased online, do you have the retailer’s user name or URL?</inlineHelpText>
        <label>Charger- Purchase Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Charger_Purchase__c</fullName>
        <description>If the charger was a replacement purchased separately, where did you purchase?</description>
        <inlineHelpText>If the charger was a replacement purchased separately, where did you purchase?</inlineHelpText>
        <label>Charger- Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Brick &amp; Mortar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charger_Sleeve__c</fullName>
        <description>If the charger was a replacement purchased separately, is there a “sleeve” at the end of the cord just before it goes into the charger base that holds the toothbrush? (Refer to Article: Oral Care Power Charger Cord Issue)</description>
        <inlineHelpText>If the charger was a replacement purchased separately, is there a “sleeve” at the end of the cord just before it goes into the charger base that holds the toothbrush? (Refer to Article: Oral Care Power Charger Cord Issue)</inlineHelpText>
        <label>Charger-Sleeve</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes there is</fullName>
                </value>
                <value>
                    <fullName>No there isn’t</fullName>
                </value>
                <value>
                    <fullName>Cannot tell</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charger_Type__c</fullName>
        <description>Collect the Charger type number (located on bottom of charging unit not handle):</description>
        <inlineHelpText>Collect the Charger type number (located on bottom of charging unit not handle):</inlineHelpText>
        <label>Charger Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3709</fullName>
                </value>
                <value>
                    <fullName>3711</fullName>
                </value>
                <value>
                    <fullName>3715</fullName>
                </value>
                <value>
                    <fullName>3733</fullName>
                </value>
                <value>
                    <fullName>3757</fullName>
                </value>
                <value>
                    <fullName>4729</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Could not ask</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charging__c</fullName>
        <description>Could you describe how you charge the unit?</description>
        <inlineHelpText>Could you describe how you charge the unit?</inlineHelpText>
        <label>Charging</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cleaning_Products__c</fullName>
        <description>Which cleaning products do you use on this product?</description>
        <inlineHelpText>Which cleaning products do you use on this product?</inlineHelpText>
        <label>Cleaning Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cleaning_frequency__c</fullName>
        <description>How often do you clean the product?</description>
        <inlineHelpText>How often do you clean the product?</inlineHelpText>
        <label>Cleaning frequency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Color_Pad_Wrapper__c</fullName>
        <description>What color is the pad wrapper?</description>
        <inlineHelpText>What color is the pad wrapper?</inlineHelpText>
        <label>Color Pad Wrapper</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pink</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Coral</fullName>
                </value>
                <value>
                    <fullName>Purple</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown / Not sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contamination__c</fullName>
        <description>Describe the foreign material:</description>
        <inlineHelpText>Describe the foreign material:</inlineHelpText>
        <label>Contamination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contamination_location__c</fullName>
        <description>Describe where the contamination is:</description>
        <inlineHelpText>Describe where the contamination is:</inlineHelpText>
        <label>Contamination location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counterfeit_Results__c</fullName>
        <description>Results of Process found in Knowledge</description>
        <inlineHelpText>Results of Process found in Knowledge</inlineHelpText>
        <label>Counterfeit Results</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not available</fullName>
                </value>
                <value>
                    <fullName>Potential Counterfeit</fullName>
                </value>
                <value>
                    <fullName>Authentic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_Sell_Charmin__c</fullName>
        <description>********Was a cross-sell/upsell coupon offered?********    CROSS SELLING REMINDER
Please up-sell to Mega Roll size and/or Charmin Ultra Strong
Link to article: https://tinyurl.com/ke6oo7w</description>
        <inlineHelpText>********Was a cross-sell/upsell coupon offered?********    CROSS SELLING REMINDER
Please up-sell to Mega Roll size and/or Charmin Ultra Strong
Link to article: https://tinyurl.com/ke6oo7w</inlineHelpText>
        <label>Cross Sell Charmin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t offer due to comment type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_Sell_Gain__c</fullName>
        <description>********Was a cross-sell/upsell coupon offered?*******   CROSS SELLING REMINDER
Please cross-sell Gain Fabric Softener and/or Gain Flings on all Gain Laundry Detergent phone calls EXCEPT adverse events
link to article: https://tinyurl.com/nxg64zs</description>
        <inlineHelpText>********Was a cross-sell/upsell coupon offered?*******   CROSS SELLING REMINDER
Please cross-sell Gain Fabric Softener and/or Gain Flings on all Gain Laundry Detergent phone calls EXCEPT adverse events
link to article: https://tinyurl.com/nxg64zs</inlineHelpText>
        <label>Cross Sell Gain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t offer due to comment type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_Sell_Tide__c</fullName>
        <description>********Was a cross-sell/upsell coupon offered?********    CROSS SELLING REMINDER
Please cross-sell Downy and/or Bounce EXCEPT adverse events.
Link to article: https://tinyurl.com/nxg64zs</description>
        <inlineHelpText>********Was a cross-sell/upsell coupon offered?********    CROSS SELLING REMINDER
Please cross-sell Downy and/or Bounce EXCEPT adverse events.
Link to article: https://tinyurl.com/nxg64zs</inlineHelpText>
        <label>Cross Sell Tide</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t offer due to comment type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cycle__c</fullName>
        <description>What cycle did you use?</description>
        <inlineHelpText>What cycle did you use?</inlineHelpText>
        <label>Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Short / Quick</fullName>
                </value>
                <value>
                    <fullName>Heavy Duty / Sanitize</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Damage__c</fullName>
        <description>Does there appear to be any damage? If so, can you describe it?</description>
        <inlineHelpText>Does there appear to be any damage? If so, can you describe it?</inlineHelpText>
        <label>Damage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diaper_Tape_Condition__c</fullName>
        <description>Did you notice if the tapes were in perfect condition or were they damaged or folded over?</description>
        <inlineHelpText>Did you notice if the tapes were in perfect condition or were they damaged or folded over?</inlineHelpText>
        <label>Diaper Tape Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diaper_Tape_Notice__c</fullName>
        <description>When did you notice the tapes not sticking?</description>
        <inlineHelpText>When did you notice the tapes not sticking?</inlineHelpText>
        <label>Diaper Tape_Notice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>When the diaper was applied</fullName>
                </value>
                <value>
                    <fullName>When the baby was moving-active</fullName>
                </value>
                <value>
                    <fullName>When the baby was sleeping-still</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diaper_Tape_Placement__c</fullName>
        <description>When attaching the tape to the diaper where on the character strip (landing zone) was the tape placed?</description>
        <inlineHelpText>When attaching the tape to the diaper where on the character strip (landing zone) was the tape placed?</inlineHelpText>
        <label>Diaper Tape Placement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diaper_Tape_Pressure__c</fullName>
        <description>When you touch the tape to the diaper do you apply any pressure to the tape? If so, how much?</description>
        <inlineHelpText>When you touch the tape to the diaper do you apply any pressure to the tape? If so, how much?</inlineHelpText>
        <label>Diaper Tape Pressure</label>
        <type>TextArea</type>
    </fields>
</CustomObject>